# full-stack-fastapi-nuxt-jwt-auth-orm-free-template

./: .env.default  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini  test.sqlite-shm  test.sqlite-wal
.github/workflows/: coverage.yml  deploy.yml  tests.yml
app/: database.py  main.py  settings.py
app/auth/: api.py  exceptions.py  services.py  utils.py
app/database/: migration.py
app/mail/: clients.py  exceptions.py  services.py
app/products/: api.py  (+3 more)
backend/: .gitignore  Dockerfile  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/auth/: api.py  exceptions.py  password_utils.py  schemas.py  services.py
backend/app/core/: settings.py
backend/app/database/: connection.py
backend/app/database/migrations/: 000_create_users_table.sql  003_add_email_column_to_users_table.sql
backend/app/mail/: client.py  clients.py  service.py  services.py
backend/app/mail/templates/: activation_email.html  recovery_email.html
backend/app/users/: api.py  dependencies.py  repository.py  repositorys.py  router.py  schemas.py  service.py  services.py
backend/app/users/auth/: password_utils.py  router.py  schemas.py  services.py
backend/tests/: conftest.py  utils.py
backend/tests/auth/: test_change_password.py  test_login.py  test_recover_password.py  test_register.py
backend/tests/users/: test_get_me.py  test_get_users_list.py
frontend/: .prettierrc  Dockerfile  eslint.config.mjs  nuxt.config.ts  package.json  tailwind.config.js
tests/: conftest.py  test_auth.py  test_products.py
(+67 files in other folders)
