[tool.poetry]
name = "buywell"
version = "0.1.0"
description = ""
authors = ["SpaceShaman <spaceshaman@tuta.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
